--- a/ESTUDO HTML/3 LISTAS/lista1.html
+++ b/ESTUDO HTML/3 LISTAS/lista1.html
@@ -20,5 +20,28 @@
     <li>CA = CArreira</li>
     <li>Rir = Risada</li>
 </ol>
+<h2>Desordenada Marcador Padrão(redondo)</h2>
+<ul>
+    <li>SA</li>
+    <li>CA</li>
+    <li>RIR</li>
+</ul>
+<h2>Desordenada Marcador Quadrado</h2>
+<ul type="square">
+    <li>SAude</li>
+    <li>CArreira</li>
+    <li>RIR</li>
+</ul>
+<h2>Listas de Definição</h2>
+<dl>
+    <dt>SAude</dt>
+    <dd>Sem ela tamo lascado</dd>
+    <dt>CArreira</dt>
+    <dd>Esta ligado a saude, sem a primeira nao conseguimos desenvolver de uma forma mais tranquila, desde que em nossas capacidades
+    </dd>
+    <dt>RIR</dt>
+    <dd>
+        Uma vida sem rir, será que vale a pena, sem que um sentimento bom exploda do coração e se materialize atraves de uma rizada, se nao tiver isso na vida, não vale a pena.
+    </dd>
 </body>
 </html>
